--- a/src/pages/ChangePassword/ChangePassword.module.css
+++ b/src/pages/ChangePassword/ChangePassword.module.css
@@ -1,5 +1,19 @@
-.container {
+.container h1 {
   display: flex;
+  margin-top: 150px;
+  justify-content: center;
   align-items: center;
+  align-content: center;
+}
+
+.container label {
+  margin-right: 5px;
+}
+
+.container form {
+  display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
 }
