--- a/src/pages/Landing/Landing.module.css
+++ b/src/pages/Landing/Landing.module.css
@@ -3,3 +3,19 @@
   align-items: center;
   flex-direction: column;
 }
+
+.container img {
+  max-width: 30%;
+  margin-top: 100px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.container button {
+  margin-bottom: 50px;
+  border-radius: 30px;
+}
+.container button:hover {
+  color: lightblue;
+}
