--- a/src/components/ChangePasswordForm/ChangePasswordForm.module.css
+++ b/src/components/ChangePasswordForm/ChangePasswordForm.module.css
@@ -1,16 +1,11 @@
-.container {
-  display: flex;
-  flex-flow: column nowrap;
-  justify-content: center;
-  align-items: center;
-  margin-bottom: 50px;
-}
-
-.label,
-.button {
-  margin-right: 0.5rem;
-}
-
 .inputContainer {
-  margin-bottom: 1rem;
+  margin-bottom: 2rem;
+}
+
+.container div {
+  display: flex;
+}
+
+.container button {
+  margin-left: 20px;
 }
