--- a/src/components/QuizCard/QuizCard.module.css
+++ b/src/components/QuizCard/QuizCard.module.css
@@ -1,44 +1,65 @@
 .container {
-  position: relative;
-  height: 300px;
-  perspective: 1000px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  padding: 10px;
+  box-sizing: border-box;
 }
 
 .card {
-  position: absolute;
-  width: 100%;
-  height: 120%;
-  transition: transform 1s;
-  transform-style: preserve-3d;
+  position: relative;
+  width: 300px;
+  height: 400px;
+  margin: 10px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+  transform-style: preserve-3d;
+  cursor: pointer;
+  transition: transform 1s;
+}
+
+.card:not(.card-flip) .back {
+  display: none;
 }
 
 .card-flip {
   transform: rotateY(180deg);
 }
 
-.front {
+.front, .back {
   position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
+  box-sizing: border-box;
+  padding: 20px;
   backface-visibility: hidden;
+}
+
+.front {
+  z-index: 2;
 }
 
 .back {
-  position: absolute;
-  width: 100%;
-  height: 100%;
   transform: rotateY(180deg);
-  backface-visibility: hidden;
+  z-index: 1;
 }
 
-.link-wrapper {
+.back h1 {
+  font-size: 24px;
+}
+
+.back button {
   position: absolute;
-  bottom: 2px;
-  left: 2px;
+  bottom: 20px;
+  right: 20px;
 }
 
-.link-wrapper a {
-  pointer-events: none;
+@media screen and (max-width: 768px) {
+  .card {
+    width: 100%;
+    height: 300px;
+  }
 }
-
